--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
 
         </div> <!--  end of footer top -->
 
-            <div class="footer__bottom">© 2024 Flow. All rights reserved. </div>
+            <div class="footer__bottom">Â© 2024 Flow. All rights reserved. </div>
 
         </div> <!--  end of footer -->
 
