--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flow</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="adaptation.css">
-    <script src="/files/functions.js" defer></script>
+    <link rel="stylesheet" href="./files/style.css">
+    <link rel="stylesheet" href="./files/adaptation.css">
+    <script src="./files/functions.js" defer></script>
 </head>
 
     <body>
